tests/baselines/reference/downlevelLetConst18.errors.txt
tests/cases/compiler/downlevelLetConst18.ts(5,14): error TS1250: In ES5 or lower, function declarations are not allowed in block scope in strict mode.
tests/cases/compiler/downlevelLetConst18.ts(9,14): error TS1250: In ES5 or lower, function declarations are not allowed in block scope in strict mode.


==== tests/cases/compiler/downlevelLetConst18.ts (2 errors) ====
    
    'use strict'
    
    for (let x; ;) {
        function foo() { x };
                 ~~~
!!! error TS1250: In ES5 or lower, function declarations are not allowed in block scope in strict mode.
    }
    
    for (let x; ;) {
        function foo1() { x };
                 ~~~~
!!! error TS1250: In ES5 or lower, function declarations are not allowed in block scope in strict mode.
    }
    
    for (let x; ;) {
        (() => { x })();
    }
    
    for (const x = 1; ;) {
        (() => { x })();
    }
    
    for (let x; ;) {
        ({ foo() { x }})
    }
    
    for (let x; ;) {
        ({ get foo() { return x } })
    }
    
    for (let x; ;) {
        ({ set foo(v) { x } })
    }
    